@@ -22,7 +22,7 @@
 #include "config.h"
 #include <string.h>
 #include <glib-object.h>
-#include <glib/gi18n.h>
+#include <glib/gi18n-lib.h>
 #include "dh-link.h"
 
 struct _DhLink {
