@@ -1,3 +1,12 @@
+2008-10-10  Sven Herzberg  <sven@imendio.com>
+
+	* src/dh-link.c:
+	* src/dh-parser.c:
+	* src/dh-search.c:
+	* src/dh-window.c:
+	* src/eggfindbar.c: Include <glib/gi18n-lib.h> and not
+	<glib/gi18n.h>
+
 2008-10-10  Richard Hult  <richard@imendio.com>
 
 	* src/dh-preferences.c:
